修改路径，删除部分build文件

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
   {{ HEAD.meta_link() }}
-  <title>登录 - NAStool</title>
+  <title>登录 - NAStoolx</title>
   <!-- CSS files -->
   <link href="../static/css/tabler.min.css" rel="stylesheet"/>
   <link href="../static/css/style.css" rel="stylesheet"/>
