--- a/web/templates/500.html
+++ b/web/templates/500.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon"/>
   <link rel="apple-touch-icon" href="../static/img/logo.png">
   <link rel="icon" href="apple-touch-icon.png">
-  <title>500 - NAStool</title>
+  <title>500 - NAStoolx</title>
   <!-- CSS files -->
   <link href="../static/css/tabler.min.css" rel="stylesheet"/>
 </head>
