--- a/web/templates/macro/head.html
+++ b/web/templates/macro/head.html
@@ -51,7 +51,7 @@
   <meta name="mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="NAStool">
+  <meta name="apple-mobile-web-app-title" content="NAStoolx">
   <meta name="description" content="NAS媒体库资源归集整理自动化工具">
   <meta name="format-detection" content="telephone=no">
   <meta name="referrer" content="never">
