--- a/web/templates/test.html
+++ b/web/templates/test.html
@@ -8,7 +8,7 @@
     <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="NAStool">
+    <meta name="apple-mobile-web-app-title" content="NAStoolx">
     <meta name="description" content="组件开发效果预览">
     <meta name="format-detection" content="telephone=no">
     <meta name="referrer" content="never">
